syntax = "proto3";

package api.v1;

option go_package = "api/v1/greeter";

service Greeter {
  rpc Ignore (IgnoreRequest) returns (IgnoreResponse) {}

  rpc Show (ShowRequest) returns (ShowResponse) {}
}

message IgnoreRequest {}

message IgnoreResponse {}

message ShowRequest {}

message ShowResponse {}